<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_home_fix"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        tools:context=".activities.HomeActivity">

        <!--row 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/home_tu_vi_tron_doi_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    style="@style/home_image"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logo" />

                <TextView
                    style="@style/home_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tu_vi_tron_doi" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_bang_cung_mang_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    style="@style/home_image"
                    android:adjustViewBounds="true"
                    android:src="@drawable/cung_mang" />

                <TextView
                    style="@style/home_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bang_cung_mang" />
            </LinearLayout>

        </LinearLayout>

        <!--row 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/home_boi_phuong_dong_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    style="@style/home_image"
                    android:adjustViewBounds="true"
                    android:src="@drawable/boi_phuong_dong" />

                <TextView
                    style="@style/home_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boi_phuong_dong" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_boi_phuong_tay_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    style="@style/home_image"
                    android:adjustViewBounds="true"
                    android:src="@drawable/boi_phuong_tay" />

                <TextView
                    style="@style/home_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boi_phuong_tay" />
            </LinearLayout>

        </LinearLayout>

        <!--row 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/home_ngay__nghi_le_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    style="@style/home_image"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ngay_le" />

                <TextView
                    style="@style/home_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ngay_le" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_le_hoi_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    style="@style/home_image"
                    android:adjustViewBounds="true"
                    android:src="@drawable/le_hoi" />

                <TextView
                    style="@style/home_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/le_hoi_vn" />
            </LinearLayout>

        </LinearLayout>

        <!--row 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/home_danh_ngon_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    style="@style/home_image"
                    android:adjustViewBounds="true"
                    android:src="@drawable/danh_ngon" />

                <TextView
                    style="@style/home_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/danh_ngon" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <!--<ImageView-->
                    <!--style="@style/home_image"-->
                    <!--android:adjustViewBounds="true"-->
                    <!--android:src="@drawable/le_hoi" />-->

                <!--<TextView-->
                    <!--style="@style/home_text_style"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/le_hoi_vn" />-->
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>